# glinthawk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  profile.bash  requirements.txt
.github/workflows/: build-amd64.yml  codeql.yml
docker/: Dockerfile.amd64  Dockerfile.cuda  Dockerfile.x86_64  run-worker-cuda.sh  worker-entrypoint.sh
docker/coordinator/: Dockerfile
docker/profile/: Dockerfile.amd64  Dockerfile.cuda
docker/workers/: Dockerfile.cuda
docs/: io.md
etc/: cflags.cmake  cuda.cmake  libtorch.cmake
notebooks/: .jupyter_ystore.db  arch.ipynb  attention.ipynb  compute_graph.ipynb  graph.ipynb  math.ipynb  model.ipynb  processprofile.ipynb  ring.ipynb  sizes.ipynb
portal/: .gitignore  requirements.txt
portal/portal/: celery.py  settings.py  urls.py
portal/prompts/: admin.py  models.py  serializers.py  tasks.py  views.py
portal/prompts/migrations/: 0001_initial.py  0002_remove_job_url_alter_job_file.py  0003_job_status_alter_prompt_status.py  0004_remove_prompt_id_prompt_uuid.py  0005_prompt_queued_at_prompt_started_at_and_more.py
py/: collect-logs.sh  configuration_opt.py  coordinator.py  coordinator_merged.py  coordinator_temp.py  launch_config.py  mock_worker.py  pipeline_simulation.py  pipeline_simulation_cython.pyx  postprocess.py  preprocess.py  process_sharegpt.py  requirements.txt  run-command-remotes.py  run-docker-remotes.py  run-on-remotes.py  run.py  settings.py  start-remote-workers.py  variants.py
py/common/: inference.py  message.py
py/coordinator/: base.py  coordinator.py  model.py  ui.py  worker.py
py/example_configs/: L7B_2xT4_8xCPU_B4.json  L7B_2xT4_8xCPU_B4_static.json  L7B_2xT4_B1.json
py/example_configs/L70B_16xT4_16xCPU_B32/: coord.json  remote.tier0.conf  remote.tier1.conf
py/example_configs/L70B_16xT4_64xCPU_B128/: coord.json  remote.tier1.conf
py/example_configs/L70B_16xT4_B9/: coord.json
py/example_configs/L70B_80xT4_B50/: coord.json
py/example_configs/L7B_2xT4_2XCPU_B1/: coord.json  remote.run  remote.tier1.conf
py/example_configs/L7B_2xT4_78xCPU_B312/: coord.json  remote.run  remote.tier0.conf  remote.tier1.conf
py/example_configs/L7B_2xT4_8XCPU_B20/: coord.json  remote.run  remote.tier1.conf
py/example_configs/L7B_2xT4_8XCPU_B4/: coord.json  remote.run  remote.tier1.conf
py/example_configs/L7B_2xT4_8XCPU_B4_static/: coord.json
py/example_configs/L7B_2xT4_B1/: coord.json  remote.tier0.conf
py/opt_configs/: 100ms_cluster.json  10ms_cluster.json  150ms_cluster.json  200ms_cluster.json  20ms_cluster.json  2ms_cluster.json  350ms_cluster.json  500ms_cluster.json  a100_t4.json  cluster.json  single_cluster.json  super_slow_cluster.json  very_slow_cluster.json
py/plot_scripts/: configuration.py  util.py
py/preprocess/: serdes.py  tokenizer.py
py/protobuf/: Makefile  glinthawk.proto  glinthawk_pb2.py
py/simulation/: pipeline_simulation.hh
src/arch/: float.hh  platform_macros.hh
src/compute/: common.hh  contextman.hh  kernel.cc  kernel.hh  kernel_batch.hh  kernel_hybrid.hh  kernel_hybrid_simple.hh  kernel_merged.hh  kernel_piped.hh  kernel_pipes.cc  kernel_pipes.hh  routerman.hh  simple.hh
src/coordinator/: coordinator.cc  coordinator.hh
src/cuda/: cudainfo.cuh  llama2.cu  llama2.cuh
src/frontend/: azure-storage-test.cc  benchworker.cc  faux-worker.cc  glinthawk.cc  gpu-test.cc  infer-batch.cc  infer-cpu-layered.cc  infer-cpu.cc  infer-cuda.cc  infer-gpu-layered.cc  infer-gpu.cc  infer-hybrid.cc  infer-layered-cpu.cc  infer-layered-cuda.cc  infer-parallel-prompts.cc  infer-partial.cc  infer.cc  kickoff.cc  platform_macros.hh  profile-cpu.cc  profile-cuda.cc  profile-gemm.cc  profile-gpu.cc  profile-offload.cc  profile-offload.cu  profile-stage.cc  profile.cc  ramble.cc  telegraf-test.cc  worker-cpu.cc  worker-cuda.cc  worker-gpu.cc  worker-hybrid.cc  worker.cc  worker_both.cc
src/gpu/: hello.cu  llama2.cu  llama2.cuh
src/llama/: llama2.cc  llama2.hh
src/message/: handler.cc  handler.hh  message.cc  message.hh  util.cc  util.hh
src/message/protobuf/: CMakeLists.txt  glinthawk.proto
src/models/: types.cc  types.hh
src/models/common/: dialogue.hh  model.cc  model.hh  state.hh
src/models/llama2/: base.cc  base.hh  configs.hh  context.hh  llama2.cc  llama2.hh  model.cc  model.hh  variants.hh
src/monitoring/: measurement.hh  telegraf.cc  telegraf.hh  util.hh
src/net/: address.cc  address.hh  message.cc  secure_socket.cc  secure_socket.hh  session.cc  session.hh  socket.cc  socket.hh
src/net/http/: body_parser.hh  chunked_parser.cc  chunked_parser.hh  http_client.cc  http_client.hh  http_header.cc  http_header.hh  http_message.cc  http_message.hh  http_message_sequence.hh  http_request.cc  http_request.hh  http_request_parser.hh  http_response.cc  http_response.hh  http_response_parser.cc  http_response_parser.hh  mime_type.cc  mime_type.hh
src/nn/: inference.cc  inference.hh  llama2.cc  llama2.hh  ops.cc  ops.hh
src/profile/: gemm_profiler.hh  profiler.hh
src/prompt/: prompt.cc  prompt.hh
src/storage/: blobstore.cc  blobstore.hh
src/storage/azure/: blobstore.cc  blobstore.hh
src/storage/local/: blobstore.cc  blobstore.hh
src/util/: convert.cc  convert.hh  demangle.cc  demangle.hh  digest.cc  digest.hh  eventfd.hh  eventloop.cc  eventloop.hh  exception.hh  file_descriptor.cc  file_descriptor.hh  random.hh  ring_buffer.cc  ring_buffer.hh  simple_string_span.hh  split.cc  split.hh  timer.cc  timer.hh  timerfd.hh  uri.cc  uri.hh  util.cc  util.hh  void.hh
src/worker/: faux-worker.hh  queue.cc  queue.hh  worker.cc  worker.hh  worker_batch.cc  worker_batch.hh  worker_merged.cc  worker_merged.hh  worker_pipes.cc  worker_pipes.hh
targets/: _targets.cmake
targets/amd64/: CMakeLists.txt
targets/cpu/: CMakeLists.txt
targets/cuda/: CMakeLists.txt
tests/: ops_cpu.cc  ops_cuda.cu
tools/: bin2glint.py  llamasplit2glint.py  profile.bash  slot_sim.py
tools/llama2/: llama2glint.py
tools/llama3/: llamasplit2glint.py
web/dashboard/: .prettierrc  index.html
web/dashboard/css/: style.css
web/dashboard/js/: script.js
(+72 files in other folders)
